--- a/src/UI/User/GameView/rooms/roomList.module.css
+++ b/src/UI/User/GameView/rooms/roomList.module.css
@@ -59,3 +59,13 @@
   justify-content: center;
   margin: 20px;
 }
+.fixedPopUpStyleHide {
+  display: flex;
+  justify-content: center;
+  visibility: hidden;
+}
+.fixedPopUpStyleShow {
+  display: flex;
+  justify-content: center;
+  visibility: visible;
+}
